<resources>
    <string name="shr_app_name">ULTIMATE ECG MONITOR</string>
    <string name="shr_hint_fname">First Name</string>
    <string name="shr_hint_lname">Last Name</string>
    <string name="shr_hint_email">Enter Email</string>
    <string name="shr_hint_password">Enter Password</string>
    <string name="shr_hint_serial">V-Device Number</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_register">Register</string>
    <string name="shr_button_login">Login</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_button_back">Go Back</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="shr_gender_m">Male</string>
    <string name="shr_gender_f">Female</string>
    <string name="shr_gender_o">Others</string>
    <string name="shr_gender_n">Prefer Not To Say</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
